fix: ensure all tab titles visible in drawer

--- a/src/components/shared_ui/drawer/drawer.scss
+++ b/src/components/shared_ui/drawer/drawer.scss
@@ -61,6 +61,8 @@
     &__content {
         flex-grow: 1;
         overflow: auto;
+        display: flex;
+        flex-direction: column;
     }
 
     &__footer {
